--- a/user/user-api/pom.xml
+++ b/user/user-api/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>user-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.first</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
