--- a/order/order-start/pom.xml
+++ b/order/order-start/pom.xml
@@ -11,6 +11,49 @@
 
     <artifactId>order-start</artifactId>
 
+    <dependencies>
+        <!--默认引入自己的business    -->
+        <dependency>
+            <groupId>org.first</groupId>
+            <artifactId>order-busi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--启动类模块单独添加 web容器 -->
+        <!-- Web：包含 Tomcat -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- Spring Cloud Alibaba Nacos 服务发现核心依赖 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <!-- 版本必须与你的Spring Boot/Spring Cloud版本匹配！-->
+            <version>2021.0.5.0</version>
+        </dependency>
+
+        <!--流控/熔断  -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <!--微服务调用-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- Spring Cloud LoadBalancer 核心依赖（负载均衡） -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
+    </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
