--- a/user/user-api/pom.xml
+++ b/user/user-api/pom.xml
@@ -12,9 +12,15 @@
     <artifactId>user-api</artifactId>
 
     <dependencies>
+
+        <!-- feign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.first</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>base-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
