--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>user</module>
         <module>gateway</module>
         <module>base-feign</module>
+        <module>product</module>
+        <module>temp</module>
     </modules>
 
 
