--- a/product/product-api/pom.xml
+++ b/product/product-api/pom.xml
@@ -11,6 +11,17 @@
 
     <artifactId>product-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.first</groupId>
+            <artifactId>base-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+
+    </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
