--- a/comm/pom.xml
+++ b/comm/pom.xml
@@ -5,32 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.first</groupId>
-        <artifactId>user</artifactId>
+        <artifactId>xran</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-busi</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.first</groupId>
-            <artifactId>user-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.first</groupId>
-            <artifactId>order-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.first</groupId>
-            <artifactId>comm-busi</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-    </dependencies>
+    <artifactId>comm</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>comm-core</module>
+        <module>comm-busi</module>
+        <module>comm-web</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
