--- a/order/order-api/pom.xml
+++ b/order/order-api/pom.xml
@@ -15,7 +15,7 @@
 
         <dependency>
             <groupId>org.first</groupId>
-            <artifactId>base-core</artifactId>
+            <artifactId>comm-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
