--- a/order/order-busi/pom.xml
+++ b/order/order-busi/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>org.first</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>comm-busi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
