--- a/pom.xml
+++ b/pom.xml
@@ -2,29 +2,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.18</version>
+    </parent>
 
     <groupId>org.first</groupId>
     <artifactId>xran</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>base-core</module>
-        <module>common</module>
         <module>order</module>
         <module>user</module>
         <module>gateway</module>
-        <module>base-feign</module>
         <module>product</module>
         <module>temp</module>
+        <module>comm</module>
     </modules>
 
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.18</version>
-    </parent>
+
 
     <!--    统一管理版本  -->
     <properties>
@@ -37,9 +37,7 @@
         <mybatis-plus.version>3.5.12</mybatis-plus.version>
         <xxl-job-core.version>2.4.1</xxl-job-core.version>
         <fastjson.version>2.0.57</fastjson.version>
-
         <druid.version>1.2.24</druid.version>
-
         <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
     </properties>
 
