--- a/product/product-busi/pom.xml
+++ b/product/product-busi/pom.xml
@@ -20,7 +20,7 @@
 
         <dependency>
             <groupId>org.first</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>comm-busi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
