--- a/comm/comm-busi/pom.xml
+++ b/comm/comm-busi/pom.xml
@@ -38,18 +38,26 @@
             <version>2.0.52</version>
         </dependency>
 
-        <!-- Redis（如果业务统一需要可放这里，否则拆到 infra 模块） -->
+        <!-- #下面的俩兄弟的redission需要手写redissionClient的Bean-->
+        <!--#start Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
-        <!-- Redisson（可选） -->
+        <!-- Redisson -->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.24.3</version>
         </dependency>
+
+        <!--#这个则可以自动根据yml自动装配
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.24.3</version>
+        </dependency>
+        -->
 
         <!-- 数据库驱动 -->
         <!--mysql-->
