--- a/comm/comm-web/pom.xml
+++ b/comm/comm-web/pom.xml
@@ -37,6 +37,14 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.first</groupId>
+            <artifactId>comm-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
