--- a/order/order-api/pom.xml
+++ b/order/order-api/pom.xml
@@ -19,7 +19,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- feign -->
+        <!-- feign单独添加 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
