--- a/order/order-busi/pom.xml
+++ b/order/order-busi/pom.xml
@@ -25,6 +25,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- product 的数据结构定义    -->
+        <dependency>
+            <groupId>org.first</groupId>
+            <artifactId>product-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--  业务依赖  -->
 
 
