--- a/product/product-api/pom.xml
+++ b/product/product-api/pom.xml
@@ -18,7 +18,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-
+        <!-- feign单独添加 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
 
