--- a/product/product-start/src/main/resources/application.yml
+++ b/product/product-start/src/main/resources/application.yml
@@ -1,6 +1,33 @@
+spring:
+  application:
+    name: product   # 其他模块按需改
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  datasource:
+    # MySQL 8.x 驱动类（适配 8.0.27 版本）
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    # 替换为你的数据库地址、端口、库名
+    url: jdbc:mysql://localhost:3308/xr?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    # 替换为你的数据库账号密码
+    username: root
+    password: root
+    type: com.zaxxer.hikari.HikariDataSource # 2.7.x 默认连接池，可省略
+
+  # MyBatis-Plus 基础配置（必加，否则 mapper 扫描失败）
+  mybatis-plus:
+    mapper-locations: classpath:mapper/**/*.xml # 若有 xml 文件需指定路径
+    type-aliases-package: org.first.product.entity # 替换为你的实体类包名
+    configuration:
+      map-underscore-to-camel-case: true # 驼峰转换
+      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印 SQL（开发用）
+    global-config:
+      db-config:
+        id-type: AUTO # 若用自增主键，需数据库表先开启 AUTO_INCREMENT
 
 server:
-  port: 8003   # 自己定义
+  port: 8004   # 自己定义
 
 feign:
   sentinel:  #fallbackFacotry需要sentinel依赖
@@ -18,33 +45,8 @@ feign:
 logging:
   level:
     com.example.user.feign.OrderFeignClient: DEBUG
-
-# product 模块 resources/application.yml
-spring:
-  application:
-    name: product   # 其他模块按需改
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
-
-  datasource:
-    # MySQL 8.x 驱动类（适配 8.0.27 版本）
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # 替换为你的数据库地址、端口、库名
-    url: jdbc:mysql://localhost:3308/xr?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-    # 替换为你的数据库账号密码
-    username: root
-    password: root
-    type: com.zaxxer.hikari.HikariDataSource # 2.7.x 默认连接池，可省略
-
-# MyBatis-Plus 基础配置（必加，否则 mapper 扫描失败）
-mybatis-plus:
-  mapper-locations: classpath:mapper/**/*.xml # 若有 xml 文件需指定路径
-  type-aliases-package: org.first.product.entity # 替换为你的实体类包名
-  configuration:
-    map-underscore-to-camel-case: true # 驼峰转换
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印 SQL（开发用）
-  global-config:
-    db-config:
-      id-type: AUTO # 若用自增主键，需数据库表先开启 AUTO_INCREMENT
+    # 关键1：指定Mapper接口所在包为DEBUG级别（必须）
+    org.first.product.mapper: debug  # 替换成你自己的Mapper包路径
+    # 关键2：MyBatis核心类日志级别（可选，兜底）
+    com.baomidou.mybatisplus: debug
+    org.apache.ibatis: debug
